Draft Article and Fonts Update
- "Apa itu Cloudflare? Perlukah untuk menggunakan nya?" Draft Article Update
- Lato Fonts Update from 1.104 -> 2.015
- Removing all Old Version of Lato Fonts

--- a/layouts/partials/head/custom.html
+++ b/layouts/partials/head/custom.html
@@ -3,10 +3,10 @@
     {{- $PermalinkFonts = .Site.Params.CDN.Fonts.URL -}}
 {{- end -}}
 <link rel="icon" href="data:,">
-<link rel="preconnect" href="https://cdn.statically.io" crossorigin>
-<link rel="dns-prefetch" href="https://cdn.statically.io">
-<link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
-<link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
+<link rel="preconnect" href="https://cdn.statically.io/" crossorigin>
+<link rel="dns-prefetch" href="https://cdn.statically.io/">
+<link rel="preconnect" href="https://cdn.jsdelivr.net/" crossorigin>
+<link rel="dns-prefetch" href="https://cdn.jsdelivr.net/">
 <link rel="stylesheet" href="{{ $PermalinkFonts }}/Lato/font.min.css" type="text/css" crossorigin="anonymous">
-<link rel="preload" href="{{ $PermalinkFonts }}/Lato/lato-v17-latin-ext_latin-regular.woff2" as="font" type="font/woff2" crossorigin>
-<link rel="preload" href="{{ $PermalinkFonts }}/Lato/lato-v17-latin-ext_latin-700.woff2" as="font" type="font/woff2" crossorigin>
+<link rel="preload" href="{{ $PermalinkFonts }}/Lato/LatoLatin-Regular.woff2" as="font" type="font/woff2" crossorigin>
+<link rel="preload" href="{{ $PermalinkFonts }}/Lato/LatoLatin-Bold.woff2" as="font" type="font/woff2" crossorigin>
