Draft Article Update and Optimize Image Resizing
- Draft Article: "Apa itu Cloudflare? Perlukah untuk menggunakan nya?" Update
- Feature: Optimizing Featured Image Resizing behaviour if the image width are under 1600px
- Using `sha384` instead `md5` for fingerprinting related content images
- CI: Change Cache Key for GitHub Actions
- Change a way to Configure Twemoji
- Update External Libraries and SRI Hashes
- Theme: Hugo Theme Update to CaiJimmy/hugo-theme-stack@7dab67b
Changelog: https://github.com/CaiJimmy/hugo-theme-stack/compare/3e8490da...7dab67b

--- a/layouts/partials/article-list/tile.html
+++ b/layouts/partials/article-list/tile.html
@@ -11,7 +11,7 @@
         {{ if $image.exists }}
             <div class="article-image">
                 {{ if $image.resource }}
-                    {{- $imageRaw := $image.resource | resources.Fingerprint "md5" -}}
+                    {{- $imageRaw := $image.resource | resources.Fingerprint "sha384" -}}
                     {{- $Permalink := "" -}}
                     {{- $Width := $imageRaw.Width -}}
                     {{- $Height := $imageRaw.Height -}}
