Draft Article Update and Change some Theme Styles
- Draft Article: "Apa itu Cloudflare? Perlukah untuk menggunakan nya?" Update
- Shortcode: Changing how Spoiler Renders
- Theme: Changing Theme Minimal Width for Desktop User in SCSS Breakpoints to 1024px
- Theme: Modify Style for Spoiler Shortcode
- Theme: Add Single Template file for Article and Details
- Theme: Separating Summary and Description (Description in Front Template and Summary in Single Post Template)
- Theme: Add "DescriptionSEO" Front Matter'
- Theme: Not using '.min' while load Fonts CSS in Development Environment
- Theme: Changing "Archives" Icon on Widget
- Theme: Adding "Read More" feature
- Theme: Adding Categories Template on Widget Layout
- Config: Adding Categories in Widgets
- i18n(id): Add Translation String for "Read More" and "Categories Cloud"
- Modify All Published Articles

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -4,14 +4,14 @@
 
 details {
     &.info {
-        display: block;
         padding: 0.75em;
-        border: 1px solid;
+        border: var(--heading-border-size) solid;
     }
 
     summary {
-        outline: none;
         cursor: pointer;
+        outline: none;
+        text-indent: 0.75em;
     }
 }
 
