--- a/layouts/partials/head/custom.html
+++ b/layouts/partials/head/custom.html
@@ -2,11 +2,13 @@
 {{- if and (.Site.Params.CDN.Fonts.URL) (eq hugo.IsProduction true) -}}
     {{- $PermalinkFonts = .Site.Params.CDN.Fonts.URL -}}
 {{- end -}}
-<link rel="icon" href="data:,">
+{{ if not .Site.Params.favicon }}
+    <link rel="icon" href="data:,">
+{{ end }}
 <link rel="preconnect" href="https://cdn.statically.io/" crossorigin>
 <link rel="dns-prefetch" href="https://cdn.statically.io/">
 <link rel="preconnect" href="https://cdn.jsdelivr.net/" crossorigin>
 <link rel="dns-prefetch" href="https://cdn.jsdelivr.net/">
-<link rel="stylesheet" href="{{ $PermalinkFonts }}/Lato/font.min.css" type="text/css" crossorigin="anonymous">
+<link rel="stylesheet" href="{{ $PermalinkFonts }}/Lato/font{{ if eq hugo.IsProduction true }}.min{{ end }}.css" type="text/css" crossorigin="anonymous">
 <link rel="preload" href="{{ $PermalinkFonts }}/Lato/LatoLatin-Regular.woff2" as="font" type="font/woff2" crossorigin>
 <link rel="preload" href="{{ $PermalinkFonts }}/Lato/LatoLatin-Bold.woff2" as="font" type="font/woff2" crossorigin>
