Add Draft Article and Published Article Update
- Add "Cara menghemat Konsumsi Bandwidth Server" Article
- Article Update: Apa itu Cloudflare? Perlukah untuk menggunakan nya?
- Theme: Make Translatable `alt` attribute for Featured Image
- Theme: `a-file` Shortcode Improvement
- Theme: Simplify Twemoji Options
- i18n(id): Adding Article "Featured Image Of" String

--- a/layouts/partials/footer/custom.html
+++ b/layouts/partials/footer/custom.html
@@ -1,16 +1,16 @@
 {{ if eq .Site.Params.Twemoji.enabled true }}
     {{- partial "helper/external" (dict "Context" . "Namespace" "Twemoji") -}}
     {{- $Twemoji := .Site.Params.Twemoji -}}
-{{ if $Twemoji.Options }}
+{{ with $Twemoji.Options }}
 <script>
     window.onload = function() {
         twemoji.parse(document.body, 
             {
-                folder: '{{ with $Twemoji.Options.Path }}{{ . }}{{ else }}svg{{ end }}', 
-                ext: '{{ with $Twemoji.Options.Ext }}{{ . }}{{ else }}.svg{{ end }}',
-                base: '{{ with $Twemoji.Options.baseURL }}{{ . }}{{ end }}'{{ with $Twemoji.Options.Size }},
-                size: '{{ . }}'{{ end }}{{ with $Twemoji.Options.className }},
-                className: '{{ . }}'{{ end }}
+                folder: '{{ .Path }}', 
+                ext: '{{ .Ext }}',
+                base: '{{ .baseURL }}',
+                size: '{{ .Size }}',
+                className: '{{ .className }}'
             }
         );
     }
