Draft Article Update and Made some Changes
- Draft Article: "Cara menghemat Konsumsi Bandwidth Server" Update
- Assets: Add Edit Icon
- Theme: Add an Article Last Updated based on Git in Article Footer
- i18n(id): Add string for Article Last Updated based on Git
- Config: Changing Article License Default Text
- Content: Adding README.md files for "Cara menghemat Konsumsi Bandwidth Server" article

--- a/layouts/partials/article/components/footer.html
+++ b/layouts/partials/article/components/footer.html
@@ -19,5 +19,13 @@
             {{ end }}
         </span>
     </section>
+    {{ if .GitInfo }}
+    <section class="article-git">
+        {{ partial "helper/icon" "edit" }}
+        <span>
+            {{ T "article.lastUpdatedGit" (dict "Hash" $.GitInfo.Hash "Subject" $.GitInfo.Subject "AbvHash" $.GitInfo.AbbreviatedHash "Author" $.GitInfo.AuthorName "Email" $.GitInfo.AuthorEmail) | safeHTML | emojify }}
+        </span>
+    </section>
+    {{ end }}
     {{- end -}}
 </footer>
