--- a/layouts/partials/head/style.html
+++ b/layouts/partials/head/style.html
@@ -1,7 +1,8 @@
+{{- $opts := dict "targetPath" "style.css" -}}
 {{ $sass := resources.Get "scss/style.scss" }}
-{{ $style := $sass | resources.ToCSS | minify | fingerprint "sha384" }}
+{{ $style := $sass | resources.ToCSS $opts | minify | fingerprint "sha384" }}
 {{ $Permalink := $style.RelPermalink }}
 {{ if and (.Site.Params.CDN.CSS.URL) (eq hugo.IsProduction true) }}
     {{ $Permalink = printf "%s%s" $.Site.Params.CDN.CSS.URL $style.RelPermalink }}
 {{ end }}
-<link rel="stylesheet" href="{{ $Permalink }}" integrity="{{ $style.Data.Integrity }}" crossorigin="anonymous">
+<link rel="stylesheet" href="{{ $Permalink }}" integrity="{{ $style.Data.Integrity }}"{{ if hugo.IsProduction }} crossorigin="anonymous"{{ end }}>
