--- a/layouts/_default/_markup/render-image.html
+++ b/layouts/_default/_markup/render-image.html
@@ -1,4 +1,4 @@
-{{- $image := .Page.Resources.GetMatch (printf "%s" (.Destination | safeURL)) -}}
+{{- $image := .Page.Resources.GetMatch (printf "%s" (.Destination | safeURL)) | resources.Fingerprint "sha256" -}}
 
 {{- if $image -}}
 	{{- $ImageURL := "" -}}
