Delete EmojiSymbols from Emoji List

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -26,5 +26,5 @@ img {
 }
 
 .emoji {
-    font-family: "Twemoji", "Twitter Emoji", "Apple Color Emoji","Segoe UI Emoji","NotoColorEmoji","Segoe UI Symbol","Android Emoji","EmojiSymbols";
+    font-family: "Twemoji", "Twitter Emoji", "Apple Color Emoji", "Segoe UI Emoji", "NotoColorEmoji", "Segoe UI Symbol", "Android Emoji";
 }
