--- a/layouts/partials/head/style.html
+++ b/layouts/partials/head/style.html
@@ -5,4 +5,4 @@
 {{ if and (.Site.Params.CDN.CSS.URL) (eq hugo.IsProduction true) }}
     {{ $Permalink = printf "%s%s" $.Site.Params.CDN.CSS.URL $style.RelPermalink }}
 {{ end }}
-<link rel="stylesheet" href="{{ $Permalink }}" integrity="{{ $style.Data.Integrity }}"{{ if hugo.IsProduction }} crossorigin="anonymous"{{ end }}>
+<link rel="stylesheet" href="{{ $Permalink }}"{{ if eq .Site.Params.SRIHash.CSS true }} integrity="{{ $style.Data.Integrity }}"{{ end }}{{ if hugo.IsProduction }} crossorigin="anonymous"{{ end }}>
