Activating Table of Contents Feature
Plus: Making TOC and Right Sidebar Scrollable

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -28,3 +28,25 @@ img {
 .emoji {
     font-family: "Twemoji", "Twitter Emoji", "Apple Color Emoji", "Segoe UI Emoji", "NotoColorEmoji", "Segoe UI Symbol", "Android Emoji";
 }
+
+.right-sidebar {
+    max-height: 100vh;
+    overflow-y: auto;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
+}
+
+.widget {
+    max-height: 100vh;
+    overflow-y: auto;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
+}
