Article Updates and use Arc.io only on Production

--- a/layouts/partials/head/custom.html
+++ b/layouts/partials/head/custom.html
@@ -1,4 +1,4 @@
-{{ if .Site.Params.arcio.enabled }}
+{{ if and (eq .Site.Params.arcio.enabled true) (eq hugo.IsProduction true) }}
     {{ with .Site.Params.arcio.widgetId }}
         <script async src="https://arc.io/widget.min.js#{{ . }}"></script>
     {{ end }}
