--- a/layouts/partials/head/custom.html
+++ b/layouts/partials/head/custom.html
@@ -22,9 +22,9 @@
     font-style: normal;
     font-weight: 300;
     font-display: swap;
-    src: local(''),
-         url('{{ printf "%s%s" $PermalinkFonts (resources.Get "fonts/Lato/LatoLatin-Light.woff2" | fingerprint "sha256").RelPermalink }}') format('woff2'), /* Modern Browsers */
-         url('{{ printf "%s%s" $PermalinkFonts (resources.Get "fonts/Lato/LatoLatin-Light.woff" | fingerprint "sha256").RelPermalink }}') format('woff'), /* Modern Browsers */
+    src: url('{{ printf "%s%s" $PermalinkFonts (resources.Get "fonts/Lato/LatoLatin-Light.woff2" | fingerprint "sha256").RelPermalink }}') format('woff2'), /* Modern Browsers */
+         url('{{ printf "%s%s" $PermalinkFonts (resources.Get "fonts/Lato/LatoLatin-Light.woff" | fingerprint "sha256").RelPermalink }}') format('woff'); /* Modern Browsers */
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 /* Webfont: LatoLatin-Regular */
@@ -33,9 +33,9 @@
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: local(''),
-         url('{{ printf "%s%s" $PermalinkFonts (resources.Get "fonts/Lato/LatoLatin-Regular.woff2" | fingerprint "sha256").RelPermalink }}') format('woff2'), /* Modern Browsers */
-         url('{{ printf "%s%s" $PermalinkFonts (resources.Get "fonts/Lato/LatoLatin-Regular.woff" | fingerprint "sha256").RelPermalink }}') format('woff'), /* Modern Browsers */
+    src: url('{{ printf "%s%s" $PermalinkFonts (resources.Get "fonts/Lato/LatoLatin-Regular.woff2" | fingerprint "sha256").RelPermalink }}') format('woff2'), /* Modern Browsers */
+         url('{{ printf "%s%s" $PermalinkFonts (resources.Get "fonts/Lato/LatoLatin-Regular.woff" | fingerprint "sha256").RelPermalink }}') format('woff'); /* Modern Browsers */
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 /* Webfont: LatoLatin-Bold */
@@ -44,8 +44,8 @@
     font-style: normal;
     font-weight: 700;
     font-display: swap;
-    src: local(''),
-         url('{{ printf "%s%s" $PermalinkFonts (resources.Get "fonts/Lato/LatoLatin-Bold.woff2" | fingerprint "sha256").RelPermalink }}') format('woff2'), /* Modern Browsers */
-         url('{{ printf "%s%s" $PermalinkFonts (resources.Get "fonts/Lato/LatoLatin-Bold.woff" | fingerprint "sha256").RelPermalink }}') format('woff'), /* Modern Browsers */
+    src: url('{{ printf "%s%s" $PermalinkFonts (resources.Get "fonts/Lato/LatoLatin-Bold.woff2" | fingerprint "sha256").RelPermalink }}') format('woff2'), /* Modern Browsers */
+         url('{{ printf "%s%s" $PermalinkFonts (resources.Get "fonts/Lato/LatoLatin-Bold.woff" | fingerprint "sha256").RelPermalink }}') format('woff'); /* Modern Browsers */
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 </style>
