--- a/layouts/_default/_markup/render-image.html
+++ b/layouts/_default/_markup/render-image.html
@@ -1,36 +1,58 @@
 {{- $image := .Page.Resources.GetMatch (printf "%s" (.Destination | safeURL)) -}}
+{{- $Permalink := .Destination | relURL | safeURL -}}
+{{- $alt := .PlainText | safeHTML -}}
+{{- $Width := 0 -}}
+{{- $Height := 0 -}}
+{{- $Srcset := "" -}}
+
+{{/* SVG and external images won't work with gallery layout, because their width and height attributes are unknown */}}
+{{- $galleryImage := false -}}
 
 {{- if $image -}}
-	{{- $image = $image | resources.Fingerprint "sha256" -}}
+	{{- $notSVG := ne (path.Ext .Destination) ".svg" -}}
+	{{- $Permalink = $image.RelPermalink -}}
 	{{- $ImageURL := "" -}}
+	{{- $svgURL := "" -}}
 	{{- if and (.Page.Site.Params.CDN.Images.URL) (eq hugo.IsProduction true) -}}
 		{{- $ImageURL = .Page.Site.Params.CDN.Images.URL -}}
 	{{- end -}}
-	{{- $alt := .PlainText | safeHTML -}}
-	<figure style="flex-grow: {{ div (mul $image.Width 100) $image.Height }}; flex-basis: {{ div (mul $image.Width 240) $image.Height }}px">
-		<a href="{{ $image.RelPermalink }}" data-size="{{ $image.Width }}x{{ $image.Height }}">
-			{{- $Width := $image.Width -}}
-			{{- $Height := $image.Height -}}
-			{{- $Srcset := "" -}}
-			{{- $Permalink := printf "%s%s" $ImageURL $image.RelPermalink -}}
+	{{- if and (.Page.Site.Params.CDN.SVG.URL) (eq hugo.IsProduction true) -}}
+		{{- $svgURL = .Page.Site.Params.CDN.SVG.URL -}}
+	{{- end -}}
 
-			{{- if (default true .Page.Site.Params.imageProcessing.content.enabled) -}}
-				{{- $small := $image.Resize "480x" -}}
-				{{- $big := $image.Resize "1024x" -}}
-				{{- $Srcset = printf "%s%s 480w, %s%s 1024w" $ImageURL $small.RelPermalink $ImageURL $big.RelPermalink -}}
-			{{- end -}}
-			
-			<img src="{{ $Permalink }}"
-				{{ with $Srcset }}srcset="{{ . }}"{{ end }}
-				width="{{ $Width }}"
-				height="{{ $Height }}"
-				loading="lazy"
-				{{ with $alt }}alt="{{ . }}"{{ end }}>
-		</a>
-		{{ with $alt }}
-		<figcaption>{{ . | markdownify }}</figcaption>
-		{{ end }}
-	</figure>
-{{- else -}}
-	<img src="{{ .Destination | relURL | safeURL }}" alt="{{ .Text }}" {{ with .Title }} title="{{ . }}"{{ end }} />
+	{{- if $notSVG -}}
+		{{- $image = $image | resources.Fingerprint "sha256" -}}
+		{{- $Width = $image.Width -}}
+		{{- $Height = $image.Height -}}
+		{{- $galleryImage = true -}}
+		{{- $Permalink = printf "%s%s" $ImageURL $image.RelPermalink -}}
+
+		{{- if (default true .Page.Site.Params.imageProcessing.content.enabled) -}}
+			{{- $small := $image.Resize `480x` -}}
+			{{- $big := $image.Resize `1024x` -}}
+			{{- $Srcset = printf `%s 480w, %s 1024w` $small.RelPermalink $big.RelPermalink -}}
+		{{- end -}}
+	{{- else -}}
+		{{- $Permalink = printf "%s%s" $svgURL $image.RelPermalink -}}
+	{{- end -}}
 {{- end -}}
+
+<figure 
+	{{ if $galleryImage }}
+		class="gallery-image" 
+		style="
+			flex-grow: {{ div (mul $image.Width 100) $image.Height }}; 
+			flex-basis: {{ div (mul $image.Width 240) $image.Height }}px"
+	{{ end }}>
+	<a href="{{ $Permalink }}" {{ if $galleryImage }}data-size="{{ $image.Width }}x{{ $image.Height }}"{{ end }}>
+		<img src="{{ $Permalink }}"
+			{{ with $Width }}width="{{ . }}"{{ end }}
+			{{ with $Height }}height="{{ . }}"{{ end }}
+			{{ with $Srcset }}srcset="{{ . }}"{{ end }}
+			loading="lazy"
+			{{ with $alt }}alt="{{ . }}"{{ end }}>
+	</a>
+	{{ with $alt }}
+	<figcaption>{{ . | markdownify }}</figcaption>
+	{{ end }}
+</figure>
