--- a/layouts/partials/article/components/details.html
+++ b/layouts/partials/article/components/details.html
@@ -26,16 +26,29 @@
     {{ end }}
     
 
-    {{- if not .Date.IsZero -}}
+    {{ if or (not .Date.IsZero) (.Site.Params.article.readingTime) }}
     <footer class="article-time">
-        {{ partial "helper/icon" "clock" }}
-        <time class="article-time--published">
+        {{ if not .Date.IsZero }}
+        <div>
+            {{ partial "helper/icon" "date" }}
+            <time class="article-time--published">
             {{ if and (eq .Site.Params.dateFormat.published "Monday, 02 January 2006") (eq .Site.Language.Lang "id") }}
                 {{ index $.Site.Data.time_id.weekdayname (printf "%d" .Date.Weekday) }}, {{ .Date.Format "02" }} {{ index $.Site.Data.time_id.months (printf "%d" .Date.Month) }} {{ .Date.Year }}
             {{ else }}
                 {{- .Date.Format (or .Site.Params.dateFormat.published "Jan 02, 2006") -}}
             {{ end }}
-        </time>
+            </time>
+        </div>
+        {{ end }}
+
+        {{ if .Site.Params.article.readingTime }}
+            <div>
+                {{ partial "helper/icon" "clock" }}
+                <time class="article-time--reading">
+                    {{ T "article.readingTime" .ReadingTime }}
+                </time>
+            </div>
+        {{ end }}
     </footer>
     {{- end -}}
 </div>
