Article Update, Defer and Async some Scripts
Plus: Accept boolean `true` in `.Params.comments`

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -16,8 +16,8 @@
     {{ partial "article/article-single.html" . }}
 
     {{ partial "article/components/related-contents" . }}
-     
-    {{ if or (not (isset .Params "comments")) (eq .Params.comments "true")}} 
+
+    {{ if not (eq .Params.comments false) }} 
         {{ partial "comments/include" . }}
     {{ end }}
 
